--- a/thomasdevri_es/sql_vulnerable/static/style.css
+++ b/thomasdevri_es/sql_vulnerable/static/style.css
@@ -8,11 +8,17 @@ html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-header {
+header,
+main {
   display: inline-block;
   text-align: center;
   width: 100%;
   height: 30%;
+  padding-bottom: 20px;
+}
+
+header {
+  background-color: green;
 }
 
 label,
@@ -21,14 +27,14 @@ input[type="text"] {
   font-size: 20px;
 }
 
-div.header__herotext {
+div.container {
   display: inline-block;
+}
+
+div.container > * {
+  text-align: center;
 }
 
 form > div {
   padding-bottom: 10px;
-}
-
-.header__thomasfeature {
-  /* special word "thomas" in header */
 }
