--- a/thomasdevri_es/sql_vulnerable/templates/base.html
+++ b/thomasdevri_es/sql_vulnerable/templates/base.html
@@ -10,14 +10,13 @@
   </head>
   <body>
     <header>
-        <div class="header__herotext">
+        <div class="container">
             <h1>thomasdevri.es</h1>
             <p>Welcome to the <span class="header__thomasfeature">thomas</span> zone</p>
         </div>
     </header>
-    <section class="main">
-        <h1>Hello World</h1>
+    <main class="main">
         {% block content %}{% endblock %}
-    </section>
+    </main>
   </body>
 </html>
