--- a/thomasdevri_es/sql_vulnerable/templates/sql_vulnerable/formpage.form.html
+++ b/thomasdevri_es/sql_vulnerable/templates/sql_vulnerable/formpage.form.html
@@ -8,7 +8,13 @@
   <div>
     <label for="message">Message</label>
     <br />
-    <input name="message" class="inject_me_full_of_that_sweet_sweet_sql" type="text" />
+    <textarea
+      rows="10"
+      cols="40"
+      name="message"
+      class="inject_me_full_of_that_sweet_sweet_sql"
+      type="text"
+    ></textarea>
   </div>
   <div>
     <input type="submit" />
