--- a/thomasdevri_es/sql_vulnerable/static/style.css
+++ b/thomasdevri_es/sql_vulnerable/static/style.css
@@ -27,14 +27,23 @@ input[type="text"] {
   font-size: 20px;
 }
 
-div.container {
-  display: inline-block;
+textarea {
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px;
 }
 
-div.container > * {
+div.container {
+  display: inline-block;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 form > div {
   padding-bottom: 10px;
+}
+
+.important {
+  color: red;
+  font-weight: bold;
+  font-style: italic;
 }
