--- a/thomasdevri_es/sql_vulnerable/templates/sql_vulnerable/formpage.html
+++ b/thomasdevri_es/sql_vulnerable/templates/sql_vulnerable/formpage.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="outer_container">
-    <div class="container">
+    <div class="form__container">
       <h1>Contact Us!</h1>
 
       {% include 'sql_vulnerable/formpage.formstatus.html' %}
